fixed chevron hide on mobile issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -69,7 +69,7 @@ app-sidebar {
     }
 
     .sidebar-toggler {
-        display: none;
+        display: none !important;
     }
 }
 
